hw-16: task is complete (final)

--- a/hw-16/hw-16.ipynb
+++ b/hw-16/hw-16.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
-    "quantity_of_turns = 100000\n",
+    "# количество итераций\n",
+    "quantity_of_turns = 5000000\n",
+    "# стоимость итерации\n",
     "cost_of_turn = 1\n",
+    "# рейндж генератора чисел\n",
     "rang = 1000\n",
     "# начальный словарь выигрышей\n",
     "dict_of_gains = {    \n",
@@ -61,90 +64,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# первое решение со словарем:\n",
-    "\n",
-    "# напишем функцию дополнения словаря выигрыша\n",
-    "# передаем словарь, рейндж, условие, делитель, выигрыш\n",
-    "#def gain_add(dct, rng, cond, dlt, gain):\n",
-    "#    for i in range(0, rng):\n",
-    "#        if i % dlt == cond and dct.get(i) == None:\n",
-    "#            dct.update({i: gain}) \n",
-    "#    return\n",
-    "\n",
-    "# дополним словарь выигрышей на 77\n",
-    "#gain_add(dict_of_gains, 1000, 77, 100, 5)\n",
-    "# дополним словарь выигрышей на 7\n",
-    "#gain_add(dict_of_gains, 1000, 7, 10, 3)\n",
-    "# дополним словарь выигрышей на 00\n",
-    "#gain_add(dict_of_gains, 1000, 0, 100, 2)\n",
-    "# дополним словарь выигрышей на 0\n",
-    "#gain_add(dict_of_gains, 1000, 0, 10, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# второе решение со словарем (более изящное):\n",
     "#формируем список условий дополнительных выигрышей:\n",
     "conditions=[[77, 100, 5],\n",
     "           [7, 10, 3],\n",
     "           [0, 100, 2],\n",
     "           [0, 10, 1]\n",
     "           ]\n",
-    "# напишем функцию дополнения словаря выигрыша\n",
-    "# передаем словарь, рейндж, условие, делитель, выигрыш\n",
+    "# пишем функцию дополнения словаря выигрыша\n",
+    "# передаем словарь, рейндж, [условие, делитель, выигрыш]\n",
     "def gain_add(dct, rng, conditions):\n",
     "    cond, dlt, gain = conditions\n",
     "    for i in range(0, rng):\n",
-    "        if i % dlt == cond and dct.get(i) == None:\n",
+    "        # если сгенерированное число подходит под условие после \n",
+    "        # деления на делитель и такого значения в словаре еще нет\n",
+    "        # (защищаемся от более высоких значений выигрышей, к примеру 777)\n",
+    "        # добавляем ключ и выигрыш\n",
+    "        if i % dlt == cond and dct.get(i) == None: \n",
     "            dct.update({i: gain}) \n",
     "    return\n",
     "# пройдемся по функции значениями списка условий дополнительных выигрышей\n",
+    "# и доформируем словарь выигрышей\n",
     "for item in conditions:\n",
     "    gain_add(dict_of_gains, rang, item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# пишем функцию результата испытаний (получает количество итераций, словарь выигрышей, рейндж)\n",
+    "# пишем функцию результата испытаний (получает количество итераций, словарь выигрышей, рейндж генерации числа)\n",
     "def trainings(turns, dct, rng):\n",
     "    total_costs = 0\n",
     "    total_gains = 0\n",
     "    for i in range(1, turns+1):\n",
-    "        result = np.random.randint(0, rang+1) \n",
-    "        total_costs += cost_of_turn\n",
-    "        total_gains += dct.get(result, 0)\n",
-    "    total_result=total_gains-total_costs\n",
-    "    total_result_per_turn=total_result/quantity_of_turns\n",
+    "        result = np.random.randint(0, rang) \n",
+    "        total_costs += cost_of_turn # прибавляем стоимость итерации к общей стоимости итераций\n",
+    "        total_gains += dct.get(result, 0) # прибавляем выигрыш из словаря (если его нет - прибавляем 0) к общему выигрышу\n",
+    "    total_result=total_gains-total_costs # считаем экономику (выигрыш минус стоимость итераций)\n",
+    "    total_result_per_turn=total_result/turns # считаем результат за ход как экономика делить на количество итераций\n",
     "    return print(f'Общий результат игры: {total_result}. Средний результат за ход: {total_result_per_turn}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Общий результат игры: -21757. Средний результат за ход: -0.21757\n"
+      "Общий результат игры: -993645. Средний результат за ход: -0.198729\n"
      ]
     }
    ],
    "source": [
     "trainings(quantity_of_turns, dict_of_gains, rang)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## насколько я помню в этих автоматах заложена 20% потерь за итерацию, что в принципе и показывает моя имитация на 5 миллионах итераций"
    ]
   }
  ],
