--- a/diploma/diploma.ipynb
+++ b/diploma/diploma.ipynb
@@ -2374,7 +2374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10. Загрузить jupyter notebook с решением на github и прислать ссылку - 5 баллов"
+    "### 10. Загрузить jupyter notebook с решением на github и прислать ссылку"
    ]
   }
  ],
