--- a/hw-19/hw-19.ipynb
+++ b/hw-19/hw-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.stats\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import math"
    ]
   },
   {
@@ -29,27 +30,290 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "266.7777777777777"
+       "97"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sigma = 25\n",
+    "### Ваш код...\n",
+    "\n",
+    "sigma = math.sqrt(225)\n",
     "Z = 1.96  # 95%\n",
     "e = 3 #%\n",
-    "\n",
-    "N = ((sigma*Z)/e)**2\n",
+    "N = math.ceil(((sigma*Z)/e)**2)\n",
     "N"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Вам даны две выборки роста мужчин и женщин. Докажите, используя t-Тест Стьдента, что различия между выборками незначительно, если уровень значимости равен 0.001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t = 1.3912752248133717\n",
+      "p = 0.16414201175662818\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "\n",
+    "population_men  =stats.norm.rvs(loc=19,scale=171,size=11000000)  # Выборка мужчин со средним ростом 171\n",
+    "population_women=stats.norm.rvs(loc=16,scale=165,size=12000)  # Выборка женщин со средним ростом 165\n",
+    "\n",
+    "### Ваш код...\n",
+    "\n",
+    "t , p  = stats.ttest_ind(population_men,population_women)\n",
+    "print(\"t = \" + str(t))\n",
+    "print(\"p = \" + str(p))\n",
+    "\n",
+    "# p-value больше чем заявленный уровень значимости в 0.001, а значит мы не можем отвергнуть нулевую гипотезу"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Определите объем необходимой выборки для исследования среднего чека за кофе в случайном городе, если известно, что в этом городе стандартное отклонение = 150, уровень доверия = 95%. Погрешность 50 рублей. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Ваш код...\n",
+    "\n",
+    "sigma = 150\n",
+    "Z = 1.96  # 95%\n",
+    "e = 50/150*100 #%\n",
+    "N = math.ceil(((sigma*Z)/e)**2)\n",
+    "N"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4.  Представьте, что вы хотите разоблачить \"волшебника\", который считает, что умеет предсказывать погоду на завтра. Отвечая просто: дождь или солнце. Вы пронаблюдали за ответами \"волшебника\" в течении какого периода времени и получили такие результаты (см.ниже). Можно ли сказать, что маг действительно умеет предсказывать погоду, \n",
+    "если уровнь значимости принять за 0.05 ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ответ волшебника</th>\n",
+       "      <th>Реальность</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Дождь</th>\n",
+       "      <td>25</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Солнце</th>\n",
+       "      <td>15</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Ответ волшебника  Реальность\n",
+       "Дождь                 25          36\n",
+       "Солнце                15          44"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observations = pd.DataFrame([[25,36],[15,44]],\n",
+    "                            index=['Дождь','Солнце'],\n",
+    "                            columns=['Ответ волшебника','Реальность'])\n",
+    "observations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t = 2.037037037037037\n",
+      "p = 0.08323639416753109\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy as sp\n",
+    "\n",
+    "### Ваш код...\n",
+    "\n",
+    "oddsratio, pvalue = sp.stats.fisher_exact(observations)  # Возможно вам пригодится эта функция.\n",
+    "\n",
+    "print(\"t = \" + str(oddsratio))\n",
+    "print(\"p = \" + str(pvalue))\n",
+    "\n",
+    "# p-value больше чем заявленный уровень значимости в 0.05, а значит мы не можем отвергнуть нулевую гипотезу и соответственно не можем его однозначно \"разоблачить\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Используя функцию mean_confidence_interval(data, confidence), постройте доверительный интервал с уровнем доверия 90% для выборки: data = [1,5,8,9,6,7,5,6,7,8,5,6,7,0,9,8,4,6,7,9,8,6,5,7,8,9,6,7,5,8,6,7,9,5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6.074074746111319, 6.628571428571429, 7.183068111031539)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [4,5,8,9,6,7,5,6,7,8,5,6,7,0,9,8,4,6,7,9,8,6,5,7,8,9,6,7,5,8,6,7,9,5,10]\n",
+    "\n",
+    "### Ваш код...\n",
+    "\n",
+    "def mean_confidence_interval(data, confidence=0.90):\n",
+    "    n = len(data)\n",
+    "    m, se = np.mean(data), scipy.stats.sem(data)\n",
+    "    h = se * scipy.stats.t.ppf((1 + confidence)/2, n)\n",
+    "    return m-h,m, m+h#,h\n",
+    "\n",
+    "print(mean_confidence_interval(data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. Принадлежит ли выборка data_1 и data_2 одному множеству? Оцените это с помощью известных вам тестов проверки гипотез."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-Тест Стьюдента\n",
+      "t = 7.35744682757447\n",
+      "p = 2.1159475572725764e-11\n",
+      "Two-sample T-test With Python\n",
+      "t = 7.068404675178226\n",
+      "p = 2.4974180382616264e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_1 = [4,5,8,9,6,7,5,6,7,8,5,6,7,0,9,8,4,6,7,9,8,6,5,7,8,9,6,7,5,8,6,7,9,5,10]\n",
+    "data_2 = [8,5,6,7,0,1,8,4,6,7,0,2,6,5,7,5,3,5,3,5,3,5,5,8,7,6,4,5,3,5,4,6,4,5,3,2,6,4,2,6,1,0,4,3,5,4,3,4,5,4,3,4,5,4,3,4,5,3,4,4,1,2,4,3,1,2,4,3,2,1,5,3,4,6,4,5,3,2,4,5,6,4,3,1,3,5,3,4,4,4,2,5,3]\n",
+    "\n",
+    "#Ваш код:\n",
+    "\n",
+    "# t-Тест Стьюдента\n",
+    "t , p  = stats.ttest_ind(data_1,data_2)\n",
+    "print('t-Тест Стьюдента')\n",
+    "print(\"t = \" + str(t))\n",
+    "print(\"p = \" + str(p))\n",
+    "\n",
+    "# Two-sample T-test With Python\n",
+    "statistic, pvalue = stats.ttest_ind(a=data_1,b=data_2,equal_var=False)\n",
+    "print('Two-sample T-test With Python')\n",
+    "print(\"t = \" + str(statistic))\n",
+    "print(\"p = \" + str(pvalue))\n",
+    "\n",
+    "# если p-value в обоих тестах мизерные, что означает что нулевая гипотеза отвергается в пользу альтернативной. т.е. выборки из разных множеств"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. На примере датасета про жилье в New York City, мы сталкивались с примером, когда переменная имеет не совсем нормальное распределение. \n",
+    "\n",
+    "Предположим, Вы сформировали две гипотезы:\n",
+    "Нулевая гипотеза - распределение нормальное, \n",
+    "Альтернативная гипотеза - распределение не нормальное.\n",
+    "\n",
+    "\n",
+    "Допустим, вы применили какой-то тест (сейчас неважно какой), который показал уровень значимости (p-value) = 0.03.\n",
+    "Каковы будут ваши выводы? Будем считать что у нас нормальное распределение или все-таки нет? Вопрос без подвоха)"
    ]
   },
   {
@@ -58,15 +322,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "95%. Результаты предшествующих исследований свидетельствуют, что стандартное отклонение генеральной совокупности приближенно равно 25 долл. Таким образом, е = 5, σ = 25 и Z = 1,96"
+    "# если p-value меньше заданного уровня значимости (к примеру, в нашем случае это 0,05) то нулевая гипотеза отвергается в пользу альтернативной. т.е. у нас не нормальное распределение."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. Первая выборка — это пациенты, которых лечили препаратом А. \n",
+    "Вторая выборка — пациенты, которых лечили препаратом Б. Значения в выборках — это некоторая характеристика эффективности лечения (уровень метаболита в крови, температура через три дня после начала лечения, срок выздоровления, число койко-дней, и т.д.) \n",
+    "\n",
+    "а) Требуется выяснить, имеется ли значимое различие эффективности препаратов А и Б, или различия являются чисто случайными и объясняются «естественной» дисперсией выбранной характеристики?  (уровень значимости принять за 5% или 0.05)\n",
+    "\n",
+    "b) При каком минимальном P-values различия были бы уже значимы? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=0.33196234898293125, pvalue=0.7400341626811637)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(11)\n",
+    "A = stats.norm.rvs(scale=50,loc=10,size=300)\n",
+    "B = A+stats.norm.rvs(scale=10,loc=-1.25,size=300)\n",
+    "\n",
+    "#Ваш код:\n",
+    "# Подсказка, обратити внимание на Two-sample T-test\n",
+    "\n",
+    "stats.ttest_ind(a=A,b=B,equal_var=False)\n",
+    "\n",
+    "# p-value = 0.74 больше заданного уровня значимости в 0.05 а значит мы не можем отвергнуть нулевую гипотезу (препараты одинаково эффективны)\n",
+    "# при p-value равным 0.05 различия уже были бы значимы для заявленного уровня значимости"
+   ]
   }
  ],
  "metadata": {
