hw-20: tasks are in progress still

--- a/hw-20/hw-20.ipynb
+++ b/hw-20/hw-20.ipynb
@@ -558,7 +558,8 @@
     "F, p = f_oneway(tillamook, newport, petersburg, magadan, tvarminne)  # дисперсионный анализ (ДА) в python\n",
     "\n",
     "alpha = 0.05  # Уровень значимости\n",
-    "print(F, p)   # Смотрим на результаты ДА\n",
+    "print(F, p)   # Смотрим на результаты ДАvse instrumenta\n",
+    "\n",
     "\n",
     "if p > alpha:\n",
     "    print('Одинаковое распределение (не отвергаем H0)')\n",
